--- a/Aplicação/Prototipo/prototipo-aplicacao/pom.xml
+++ b/Aplicação/Prototipo/prototipo-aplicacao/pom.xml
@@ -63,6 +63,14 @@
             <scope>compile</scope>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/com.profesorfalken/jSensors -->
+        <dependency>
+            <groupId>com.profesorfalken</groupId>
+            <artifactId>jSensors</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+
+        
 
 
     </dependencies>
