--- a/Site/myapp/package.json
+++ b/Site/myapp/package.json
@@ -11,9 +11,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "^2.0.4",
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0"
+    "morgan": "~1.9.1",
+    "popper.js": "^1.15.0",
+    "pug": "^2.0.4"
   }
 }
