--- a/Site/MeuSite/package.json
+++ b/Site/MeuSite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "meusite",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "jquery": "^3.4.1",
     "morgan": "~1.9.1",
     "popper.js": "^1.15.0",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "mssql": "~5.1.0"
   }
 }
