--- a/Site/MeuSite/package.json
+++ b/Site/MeuSite/package.json
@@ -13,8 +13,9 @@
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
     "morgan": "~1.9.1",
+    "mssql": "~5.1.0",
+    "nodemon": "^1.19.4",
     "popper.js": "^1.15.0",
-    "pug": "^2.0.4",
-    "mssql": "~5.1.0"
+    "pug": "^2.0.4"
   }
 }
