--- a/Aplicação/Tela login + banco/MavenLogin/pom.xml
+++ b/Aplicação/Tela login + banco/MavenLogin/pom.xml
@@ -18,6 +18,12 @@
             <version>5.1.4.RELEASE</version>
             <type>jar</type>
         </dependency>
+        
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.17</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
