--- a/Site/MeuSite/package.json
+++ b/Site/MeuSite/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.9.1",
     "mssql": "~5.1.0",
     "nodemon": "^1.19.4",
+    "passport-facebook": "^3.0.0",
     "popper.js": "^1.15.0",
     "pug": "^2.0.4"
   }
