--- a/Aplicação/Prototipo/prototipo-aplicacao/pom.xml
+++ b/Aplicação/Prototipo/prototipo-aplicacao/pom.xml
@@ -76,6 +76,13 @@
             <artifactId>AbsoluteLayout</artifactId>
             <version>SNAPSHOT</version>
         </dependency>
+		
+		<!-- https://mvnrepository.com/artifact/pengrad/java-telegram-bot-api -->
+        <dependency>
+          <groupId>com.github.pengrad</groupId>
+          <artifactId>java-telegram-bot-api</artifactId>
+          <version>4.4.0</version>
+        </dependency>
       
         
         <!-- https://mvnrepository.com/artifact/com.profesorfalken/jSensors -->
